# WFiIS-PGK-2019

./: README.md
lab01/: CMakeLists.txt  main.cpp
lab01/include/: font.h
lab01/src/: application.cpp  application.h  canvas.cpp  canvas.h  file_manager.cpp  file_manager.h  menu.cpp  menu.h
lab02/: CMakeLists.txt  main.cpp
lab02/src/: application.cpp  application.hpp
lab02/src/circles/: circle.cpp  circle.hpp  cmy_circle.cpp  cmy_circle.hpp  hsl_circle.cpp  hsl_circle.hpp  hsv_circle.cpp  hsv_circle.hpp  rgb_circle.cpp  rgb_circle.hpp
lab02/src/graphics/: canvas.cpp  canvas.hpp  window.cpp  window.hpp
lab02/src/utility/: input_manager.cpp  input_manager.hpp
lab02/src/widgets/: fps_counter.cpp  fps_counter.hpp  slider.cpp  slider.hpp
lab03/: CMakeLists.txt  main.cpp
lab03/src/: application.cpp  application.hpp
lab03/src/graphics/: frame.cpp  frame.hpp
lab04/: CMakeLists.txt  ChartClass.cpp  ChartClass.h  ConfigClass.h  GUIMyFrame1.h
lab6/: lab6.sln
lab6/lab6/: GUIMyFrame1.cpp  lab6.vcxproj  lab6.vcxproj.filters
lab6/lab6/Debug/: vc141.idb
lab6/lab6/Debug/lab6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
